--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto</title>
-    <link rel="stylesheet" href="../static/style.css"> 
+    <link rel="stylesheet" href="./css/login.css"> 
 </head>
 <body>
     <header>
@@ -30,6 +30,6 @@
         <p>© 2025 Mi Proyecto</p>
     </footer>
 
-    <script src="../static/script.js"></script>  
+    <script src="./js/script.js"></script>  
 </body>
 </html>
