--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Proyecto</title>
+    <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="./css/login.css"> 
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi proyecto Spring Boot</h1>
+        <h1>Bienvenido</h1>
     </header>
 
     <main>
-        <section>
-            <h2>Formulario de Contacto</h2>
-            <form action="#" method="POST">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required><br><br>
+        <div class="div-form">
+            <section class="section-form">
+                <h2>Iniciar Sesión</h2>
+                <form action="/index" method="post">
+                    <label for="nombre">Usuario:</label>
+                    <input type="text" id="nombre" name="user" required>
 
-                <label for="email">Correo:</label>
-                <input type="email" id="email" name="email" required><br><br>
+                    <label for="password">Contraseña:</label>
+                    <input type="password" id="password" name="pass" required>
 
-                <button type="submit">Enviar</button>
-            </form>
-        </section>
+                    <button type="submit">Iniciar sesión</button>
+                </form>
+
+                <div class="div-register">
+                    <a  class="register" href="/register.html">Registrarme</a>
+                </div>
+             </section>  
+        </div>
     </main>
 
     <footer>
-        <p>© 2025 Mi Proyecto</p>
+        <p>© 2025 Sistema Financiero</p>
     </footer>
 
     <script src="./js/script.js"></script>  
