Implementar pruebas put, get con hibernate

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="./css/login.css"> 
+    <link rel="stylesheet" href="./css/index.css"> 
 </head>
 <body>
     <header>
-        <h1>Sistema Financiero - Less</h1>
+        <nav class="nav">
+            <div class="logo">Sistema financiero</div> 
+            <ul class="menu">
+                <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="#" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
+                <li><a href="#" class="enlace" id="otros">Otros</a></li>
+                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
+            </ul>
+        </nav>
     </header>
 
+    <section id="operaciones">
+        <h1>Operaciones</h1>
+    </section>
 
     <footer>
         <p>© 2025 Sistema Financiero</p>
