--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -19,17 +19,16 @@
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
 
+                    <label for="documento">Apellido:</label>
+                    <input type="text" id="apellido" name="apellido" required>
+
                     <label for="documento">Documento:</label>
                     <input type="text" id="documento" name="documento" required>
 
+                    <input type="date" name="nacimiento" required>
+
                     <label for="correo">Correo Electrónico:</label>
                     <input type="email" id="correo" name="correo" required>
-
-                    <label for="celular">Celular:</label>
-                    <input type="tel" id="celular" name="celular" required>
-
-                    <label for="contraseña">Contraseña:</label>
-                    <input type="password" id="contraseña" name="contraseña" required>
 
                     <button type="submit">Registrarse</button>
                 </form>
