mejorar diseño del sistema financiero

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -12,16 +12,34 @@
             <div class="logo">Sistema financiero</div> 
             <ul class="menu">
                 <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
-                <li><a href="#" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
+                <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
                 <li><a href="#" class="enlace" id="otros">Otros</a></li>
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
+                <li><a href="#" class="enlace" id="contacto">Cerrar sesión</a></li> 
             </ul>
         </nav>
     </header>
 
-    <section id="operaciones">
-        <h1>Operaciones</h1>
-    </section>
+    <section class="categoria">
+    <div class="fila">
+        <div class="operaciones">
+            <h1>Depositar</h1>
+        </div>
+        <div class="operaciones">
+            <h1>Transferir</h1>
+        </div>
+    </div>
+
+    <div class="fila">
+        <div class="operaciones">
+            <h1>Consultar</h1>
+        </div>
+        <div class="operaciones">
+            <h1>Historial</h1>
+        </div>
+    </div>
+</section>
+
 
     <footer>
         <p>© 2025 Sistema Financiero</p>
