Agregar nueva entidad y sus modulos

--- a/src/main/resources/public/register.html
+++ b/src/main/resources/public/register.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Usuario</title>
+    <title>Registro</title>
+    <link rel="stylesheet" href="./css/index.css"> 
     <link rel="stylesheet" href="./css/register.css">
+
 </head>
 <body>
     <header>
-        <h1>Registro de Usuario</h1>
+        <nav class="nav">
+            <div class="logo">Registrar persona</div> 
+            <ul class="menu">
+                <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
+                <li><a href="login.html" class="enlace" id="login">Iniciar sesion</a></li> 
+                <li><a href="#" class="enlace" id="register">Registrarme</a></li> 
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -25,10 +35,14 @@
                     <label for="documento">Documento:</label>
                     <input type="text" id="documento" name="documento" required>
 
+                    <label for="documento">Nacimiento</label>
                     <input type="date" name="nacimiento" required>
 
                     <label for="correo">Correo Electrónico:</label>
                     <input type="email" id="correo" name="correo" required>
+
+                    <label for="correo">Contraseña:</label>
+                    <input type="password" id="password" name="password" required>
 
                     <button type="submit">Registrarse</button>
                 </form>
@@ -39,5 +53,7 @@
     <footer>
         <p>© 2025 Sistema Financiero</p>
     </footer>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
