--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -15,7 +15,7 @@
                 <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
                 <li><a href="#" class="enlace" id="otros">Otros</a></li>
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="#" class="enlace" id="contacto">Cerrar sesión</a></li> 
+                <li><a href="login.html" class="enlace" id="contacto">Cerrar sesión</a></li> 
             </ul>
         </nav>
     </header>
