Ordenar y separar modulos entre persona y usuario

--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -17,10 +17,10 @@
                 <h2>Iniciar Sesión</h2>
                 <form action="/index" method="post">
                     <label for="nombre">Usuario:</label>
-                    <input type="text" id="nombre" name="user" required>
+                    <input type="text" id="nombre" name="username" required>
 
                     <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="pass" required>
+                    <input type="password" id="password" name="password" required>
 
                     <button type="submit">Iniciar sesión</button>
                 </form>
