Corrigiendo error al registrar cuenta relacionada con entidades

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,9 +13,11 @@
             <ul class="menu">
                 <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
-                <li><a href="#" class="enlace" id="otros">Otros</a></li>
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
                 <li><a href="login.html" class="enlace" id="contacto">Cerrar sesión</a></li> 
+            </ul>
+            <ul class="menu-perfil">
+                <li><a href="#" class="enlace-perfil" id="inicio">Inicio</a></li>
             </ul>
         </nav>
     </header>
