--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -15,7 +15,7 @@
         <div class="div-form">
             <section class="section-form">
                 <h2>Iniciar Sesión</h2>
-                <form action="/index" method="post">
+                <form action="/login" method="post">
                     <label for="nombre">Usuario:</label>
                     <input type="text" id="nombre" name="username" required>
 
