--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -44,14 +44,12 @@
                 <label for="apellido">Apellido:</label>
                 <input type="text" id="apellido" name="apellido" required>
 
-                <label for="documento">Documento:</label>
-                <input type="text" id="documento" name="documento" required>
+                <label for="correo">Correo Electrónico:</label>
+                <input type="email" id="correo" name="correo" required>
 
                 <label for="nacimiento">Fecha de nacimiento:</label>
                 <input type="date" id="nacimiento" name="nacimiento" required>
-
-                <label for="correo">Correo Electrónico:</label>
-                <input type="email" id="correo" name="correo" required>
+                
             </div>
 
             <div class="boton-container">
@@ -59,6 +57,16 @@
             </div>
         </form>
     </section>
+
+    <div class="div-link">
+        <a href="#" class="linkUsuario">Cambiar datos de mi <span>usuario</span></a>
+    </div>
+
+    <footer>
+        <p>© 2025 Sistema Financiero</p>
+    </footer>
+
+    <script src="./js/script.js"></script>  
 
 </body>
 </html>
