--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -36,7 +36,7 @@
     
     <section class="formulario-actualizar">
         <h2>Actualizar Datos</h2>
-        <form action="#" method="post">
+        <form action="/actualizar" method="post">
             <div class="grupo-campos">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
