style: corregir direccionamiento en la vista de actualizar datos

--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -18,7 +18,7 @@
                 <li><a href="/logout" class="enlace" id="contacto">Cerrar sesión</a></li> 
             </ul>
             <ul class="menu-perfil">
-                <li><a href="#" class="enlace-perfil" id="inicio">
+                <li><a href="perfil.html" class="enlace-perfil" id="inicio">
                     <span id="h1"></span>
                     <script> 
                         fetch('/api/datos')
