fix: modificar enlaces entre vistas y puerto

--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo">Sistema financiero</div> 
+            <div class="logo"> financiero</div> 
             <ul class="menu">
                 <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
