wip: cambios sobre actualizar usuario en progreso

--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"> financiero</div> 
+            <div class="logo">Sistema financiero</div> 
             <ul class="menu">
                 <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
@@ -58,8 +58,26 @@
         </form>
     </section>
 
-    <div class="div-link">
+    <div class="div-link" id="overlay-usuarioDatos-trigger">
         <a href="#" class="linkUsuario">Cambiar datos de mi <span>usuario</span></a>
+    </div>
+
+    <div id="overlay-usuarioDatos">
+        <div id="menu-update-usuario" class="hidden-update">
+            <form action="#" method="post">
+                <div class="grupo-campos-usuario">
+                    <label for="nombre">Usuario:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+
+                    <label for="correo">Contraseña:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+
+                <div class="boton-container">
+                    <button type="submit">Actualizar usuario</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <footer>
