--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -68,8 +68,8 @@
             <h2>Actualizar usuario</h2>
             <form action="/actualizarUsuario" method="post">
                 <div class="grupo-campos-usuario">
-                    <label for="nombre">Usuario:</label>
-                    <input type="text" id="nombre" name="nombre" required>
+                    <label for="usuario">Usuario:</label>
+                    <input type="text" id="username" name="username" required>
 
                     <label for="correo">Contraseña:</label>
                     <input type="password" id="password" name="password" required>
