--- a/src/main/resources/public/depositar.html
+++ b/src/main/resources/public/depositar.html
@@ -36,7 +36,7 @@
 
     <section class="depositar-form">
         <h2>Depositar</h2>
-        <form action="#" method="post">
+        <form action="/transaccion/depositar" method="post">
             <div class="grupo-campos">
                 <label for="valor">Ingrese el monto a depositar:</label>
                 <input type="number" id="valor" name="valor" required min="2000" step="0.01">
