--- a/src/main/resources/public/consultar.html
+++ b/src/main/resources/public/consultar.html
@@ -43,9 +43,9 @@
                     .then(response => response.json())
                     .then(data =>{
                         const lista = document.getElementById("lista");
-                        const item = document.createElement("li");
+                        const item = document.createElement("h1");
 
-                        item.textContent = data.saldo;
+                        item.textContent = "$" + data.saldo;
 
                         lista.appendChild(item);
                     })
