wip: avance en el proceso de transferencia entre usuarios

--- a/src/main/resources/public/depositar.html
+++ b/src/main/resources/public/depositar.html
@@ -35,7 +35,7 @@
     </header>
 
     <section class="depositar-form">
-        <h2>Depositar</h2>
+        <h2>Depositar</h2>/transaccion/transferir
         <form action="/transaccion/depositar" method="post">
             <div class="grupo-campos">
                 <label for="valor">Ingrese el monto a depositar:</label>
