--- a/src/main/resources/public/transferir.html
+++ b/src/main/resources/public/transferir.html
@@ -36,16 +36,16 @@
 
     <section class="depositar-form">
         <h2>Ingrese los datos para transferir</h2>
-        <form action="#" method="post">
+        <form action="/transaccion/transferir" method="post">
             <div class="grupo-campos">
                 <label for="valor">Valor a transferir:</label>
-                <input type="number" id="valor" name="valor" required min="5000" step="0.01">
+                <input type="number" id="valor" name="valor">
 
                 <label for="valor">Numero de cuenta:</label>
-                <input type="number" id="NumeroCuenta" name="NumeroCuenta" required>
+                <input type="text" id="cuentaDestino" name="cuentaDestino" required>
 
                 <label for="valor">Detalles de transferencia:</label>
-                <input type="text" id="detalle" name="detalle" required>
+                <input type="text" id="descripcion" name="descripcion" required>
             </div>
 
             <div class="boton-container">
