style: añadir estructura y diseño para vista transacciones

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -58,7 +58,7 @@
                 <a href="consultar.html"><h1>Consultar saldo</h1></a>
             </div>
             <div class="operaciones">
-                <a href=""><h1>Transacciones</h1></a>
+                <a href="historial.html"><h1>Transacciones</h1></a>
             </div>
         </div>
     </section>
