--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -56,7 +56,7 @@
                 <button type="submit">Guardar Cambios</button>
             </div>
         </form>
-        <div id="resultado" class="resultado">Actualizacion exitosa.</div>
+        <div id="resultado" class="resultado"></div>
     </section>
 
     <div id="overlay"></div>
