fix: mejorar interaccion y diseño con la actualizacion de usuarios

--- a/src/main/resources/public/update.html
+++ b/src/main/resources/public/update.html
@@ -56,7 +56,7 @@
                 <button type="submit">Guardar Cambios</button>
             </div>
         </form>
-        <div id="resultado" class="resultado"></div>
+        <div id="resultadoPersona" class="resultado"></div>
     </section>
 
     <div id="overlay"></div>
@@ -79,6 +79,7 @@
                 <div class="boton-update">
                     <button type="submit">Actualizar usuario</button>
                 </div>
+                <div id="resultadoUsuario" class="resultado"></div>
             </form>
         </div>
 
