fix: corregir problema con la autenticacion y autorizacion para spring security

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
         <div class="div-form">
             <section class="section-form">
                 <h2>Iniciar Sesión</h2>
-                <form id="LoginForm">
+                <form id="loginForm">
                     <label for="nombre">Usuario:</label>
                     <input type="text" id="username" name="username" required>
 
@@ -26,7 +26,7 @@
                 </form>
 
                 <div class="div-register">
-                    <a  class="register" href="/register.html">Registrarme</a>
+                    <a  class="register" href="register.html">Registrarme</a>
                 </div>
              </section>  
             <div id="resultado" class="resultado"></div>
@@ -37,7 +37,7 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="./js/script.js"></script>
-    <script src="./js/login.js"></script>  
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/login.js"></script>  
 </body>
 </html>
