feat: agregar id en el constructor de UserDetails para poder acceder al usuario

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="/logout" class="enlace" id="contacto">Cerrar sesión</a></li> 
+                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
             </ul>
             <ul class="menu-perfil">
                 <li><a href="perfil.html" class="enlace-perfil" id="inicio">
@@ -68,6 +68,7 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="./js/script.js"></script>  
+    <script src="js/script.js"></script>  
+    <script src="js/index.js"></script>
 </body>
 </html>
