--- a/src/main/resources/static/perfil.html
+++ b/src/main/resources/static/perfil.html
@@ -12,23 +12,14 @@
         <nav class="nav">
             <div class="logo">Sistema financiero</div> 
             <ul class="menu">
-                <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
-                <li><a href="update.html" class="enlace" id="actualizar">Cambiar mis datos</a></li> 
+                <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="/logout" class="enlace" id="contacto">Cerrar sesión</a></li> 
+                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
             </ul>
             <ul class="menu-perfil">
-                <li><a href="#" class="enlace-perfil" id="inicio">
-                    <span id="h1"></span>
-                    <script> 
-                        fetch('/api/datos')
-                            .then(response => response.json())
-                            .then(data => {
-                                const perfil = document.getElementById('h1');
-                                perfil.textContent = data.nombre;
-                            })
-                            .catch(error => console.error("Error", error))
-                    </script>
+                <li><a href="perfil.html" class="enlace-perfil" id="inicio">
+                    <span id="sesion"></span>
                 </a></li>
             </ul>
         </nav>
@@ -40,30 +31,6 @@
             <ul class="datos" id="lista"></ul>
             <a href="./update.html" class="a-editar">Cambiar mis datos</a>
         </div>
-
-        <script>
-            fetch('/api/datos')
-                .then(response => response.json())
-                .then(data => {
-                    const lista = document.getElementById("lista");
-
-                    const campos = [
-                        { Label: "Nombre", value: data.nombre + " " + data.apellido },
-                        { Label: "Documento", value: data.documento },
-                        { Label: "Correo", value: data.correo },
-                        { Label: "Usuario", value: data.username },
-                        { Label: "Rol", value: data.rol },
-                        { Label: "Número de cuenta", value: data.numCuenta },
-                        { Label: "Estado", value: data.estado },
-                    ];
-
-                    campos.forEach(campo => {
-                        const item = document.createElement("li");
-                        item.innerHTML = `<span class="label">${campo.Label}:</span> <span class="value">${campo.value}</span>`;
-                        lista.appendChild(item);
-                    });
-                });
-        </script>
     </section>
     
     <footer>
@@ -72,6 +39,8 @@
         <p>Col</p>
     </footer>
 
-    <script src="./js/script.js"></script>  
+    
+    <script src="js/auth.js"></script>  
+    <script src="js/main.js"></script>
 </body>
 </html>
