fix: ajustar peticiones fetch y validación de token tras actualización JWT en backend

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="./css/index.css"> 
+    <link rel="stylesheet" href="../css/index.css"> 
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
             <p>¡Bienvenido al Sistema Financiero! Nos alegra tenerte aquí. Desde esta plataforma podrás gestionar de forma segura y sencilla todas tus operaciones bancarias. Deposita fondos, realiza transferencias, consulta tus datos y lleva el control de tu historial de movimientos en un solo lugar. Diseñado pensando en ti, nuestro sistema te brinda una experiencia rápida, intuitiva y confiable para que tomes el control de tus finanzas personales en cualquier momento. ¡Comienza ahora y aprovecha todas las funcionalidades que tenemos para ofrecerte!</p>
         </div>
         
-        <div class="portada"><img src="Images/Portada.png" alt="Sistema financiero"></div>
+        <div class="portada"><img src="../Images/Portada.png" alt="Sistema financiero"></div>
     </section>
 
     <section class="categoria">
@@ -59,8 +59,9 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script type="module" src="js/auth.js"></script>
-    <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/main.js"></script> 
+    <script type="module" src="../js/auth.js"></script>
+    <script type="module" src="../js/index.js"></script>
+    <script type="module" src="../js/perfil.js"></script>
+    <script src="../js/main.js"></script> 
 </body>
 </html>
