--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="./css/login.css"> 
+    <link rel="stylesheet" href="../css/login.css"> 
 </head>
 <body>
     <header>
@@ -37,7 +37,6 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <!-- <script src="js/script.js"></script> -->
-    <script src="js/login.js"></script>  
+    <script src="../js/login.js"></script>  
 </body>
 </html>
