--- a/src/main/resources/static/html/perfil.html
+++ b/src/main/resources/static/html/perfil.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" href="./css/index.css"> 
-    <link rel="stylesheet" href="./css/perfil.css">
+    <link rel="stylesheet" href="../css/index.css"> 
+    <link rel="stylesheet" href="../css/perfil.css">
 </head>
 <body>
     <header>
         <nav class="nav">
             <div class="logo">Sistema financiero</div> 
             <ul class="menu">
-                <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
                 <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
@@ -29,7 +29,7 @@
         <div class="DatosUsuario">
             <h1>Datos del usuario</h1>
             <ul class="datos" id="lista"></ul>
-            <a href="./update.html" class="a-editar">Cambiar mis datos</a>
+            <a href="update.html" class="a-editar">Cambiar mis datos</a>
         </div>
     </section>
     
@@ -40,7 +40,7 @@
     </footer>
 
     
-    <script src="js/auth.js"></script>  
-    <script src="js/main.js"></script>
+    <script type="module" src="../js/perfil.js"></script>  
+    <script src="../js/main.js"></script>
 </body>
 </html>
