--- a/src/main/resources/static/html/update.html
+++ b/src/main/resources/static/html/update.html
@@ -79,6 +79,7 @@
     </footer>
 
     <script type="module" src="../js/perfil.js"></script>  
+    <script type="module" src="../js/actualizar.js"></script>
     <script src="../js/main.js"></script>  
 
 </body>
