fix: corregir js para consultar saldo

--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -55,7 +55,7 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="./js/script.js"></script>
-    <script src="./js/registro.js"></script>
+    <script src="../js/main.js"></script>
+    <script type="module" src="../js/registro.js"></script>
 </body>
 </html>
