--- a/src/main/resources/static/html/update.html
+++ b/src/main/resources/static/html/update.html
@@ -12,7 +12,7 @@
         <nav class="nav">
             <div class="logo">Sistema financiero</div> 
             <ul class="menu">
-                <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
                 <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
