--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -49,7 +49,7 @@
                 <a href="operaciones/consultar.html"><h1>Consultar saldo</h1></a>
             </div>
             <div class="operaciones">
-                <a href="operaciones/transferir.html"><h1>Transacciones</h1></a>
+                <a href="operaciones/historial.html"><h1>Transacciones</h1></a>
             </div>
         </div>
     </section>
