--- a/src/main/resources/static/html/operaciones/depositar.html
+++ b/src/main/resources/static/html/operaciones/depositar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,28 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/operaciones.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
-            <div class="logo">Sistema financiero</div> 
+            <div class="logo">Sistema financiero</div>
             <ul class="menu">
-                <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
-                <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
-                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
+                <li><a href="../index.html" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="#" class="enlace" id="actualizar">Servicios</a></li>
+                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li>
+                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li>
             </ul>
             <ul class="menu-perfil">
                 <li><a href="perfil.html" class="enlace-perfil" id="inicio">
-                    <span id="sesion"></span>
-                </a></li>
+                        <span id="sesion"></span>
+                    </a></li>
             </ul>
         </nav>
     </header>
 
     <section class="depositar-form">
-        <h2>Depositar</h2>/transaccion/transferir
-        <form action="/transaccion/depositar" method="post">
+        <h2>Depositar</h2>
+        <form id="depositarForm">
             <div class="grupo-campos">
                 <label for="valor">Ingrese el monto a depositar:</label>
                 <input type="number" id="valor" name="valor" required min="2000" step="0.01">
@@ -36,14 +38,19 @@
             <div class="boton-container">
                 <button type="submit">Confirmar</button>
             </div>
+            <div id="resultadoUsuario" class="resultado"></div>
         </form>
     </section>
-   
+
 
     <footer>
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="./js/script.js"></script>  
+    <script type="module" src="/js/perfil.js"></script>
+    <script type="module" src="/js/operaciones/depositar.js"></script>
+    <script src="/js/main.js"></script>
+
 </body>
+
 </html>
