--- a/src/main/resources/static/html/operaciones/historial.html
+++ b/src/main/resources/static/html/operaciones/historial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,61 +8,40 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/operaciones.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
-            <div class="logo">Sistema financiero</div> 
+            <div class="logo">Sistema financiero</div>
             <ul class="menu">
-                <li><a href="index.html" class="enlace" id="inicio">Inicio</a></li>
-                <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
-                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
+                <li><a href="../index.html" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="#" class="enlace" id="actualizar">Servicios</a></li>
+                <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li>
+                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li>
             </ul>
             <ul class="menu-perfil">
                 <li><a href="perfil.html" class="enlace-perfil" id="inicio">
-                    <span id="sesion"></span>
-                </a></li>
+                        <span id="sesion"></span>
+                    </a></li>
             </ul>
         </nav>
     </header>
 
     <section class="historial-section">
         <h2>Tu transacciones:</h2>
-            <div class="grupo-campos-historial">
-                <div class="datos" id="div-lista"></div>
-                <script>
-                    fetch("/transaccion/historial")
-                    .then(response => response.json())
-                    .then(data =>{
-                        const lista = document.getElementById("div-lista");
-                       
-                        lista.innerHTML="";
+        <div class="grupo-campos-historial">
+            <div class="datos" id="divLista"></div>
 
-                        data.forEach(transaccion => {
-                            const item = document.createElement("div");
-                            item.className = "data-historia";
-
-                            item.innerHTML = `
-                                
-                                <p> <b>Mi cuenta:</b> ${transaccion.cuenta.num_cuenta}<p>
-                                <p> <b>Cuenta externa:</b> ${transaccion.cuenta_destino}<p>
-                                <p> <b>Tipo de movimiento:</b> ${transaccion.tipo}<p>
-                                <p> <b>Valor:</b> $${transaccion.monto}<p>
-                                <p> <b>Descripcion:</b> ${transaccion.descripcion}<p>
-                                <p> <b>Fecha:</b> ${transaccion.fecha}<p>
-                            `
-
-                            lista.appendChild(item);
-                        });
-                    })
-                </script>
     </section>
-   
+
 
     <footer>
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="./js/script.js"></script>  
+    <script type="module" src="/js/perfil.js"></script>
+    <script type="module" src="/js/operaciones/historial.js"></script>
+    <script src="/js/main.js"></script>
 </body>
+
 </html>
