wip: implementar permisos y roles para los clientes al registrar

--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="./css/index.css"> 
-    <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="/css/index.css"> 
+    <link rel="stylesheet" href="/css/register.css">
 
 </head>
 <body>
@@ -15,8 +15,8 @@
             <ul class="menu">
                 <li><a href="#" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="login.html" class="enlace" id="login">Iniciar sesion</a></li> 
-                <li><a href="#" class="enlace" id="register">Registrarme</a></li> 
+                <li><a href="/html/login.html" class="enlace" id="login">Iniciar sesion</a></li> 
+                <li><a href="/html/register.html" class="enlace" id="register">Registrarme</a></li> 
             </ul>
         </nav>
     </header>
@@ -55,7 +55,7 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="../js/main.js"></script>
-    <script type="module" src="../js/registro.js"></script>
+    <script src="/js/main.js"></script>
+    <script type="module" src="/js/register.js"></script>
 </body>
 </html>
