fix: corregir mostrar nombre del usuario simultaneamente al iniciar sesion

--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -37,6 +37,6 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script src="../js/login.js"></script>  
+    <script type="module" src="../js/login.js"></script>  
 </body>
 </html>
