feat: implementar transaccion entre usuarios por medio del fetch y autorizacion token

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -37,19 +37,19 @@
         <h1>¿Que operacion deseas realizar?</h1>
         <div class="fila">
             <div class="operaciones">
-                <a href="operaciones/depositar.html"><h1>Depositar</h1></a>
+                <a href="/html/operaciones/depositar.html"><h1>Depositar</h1></a>
             </div>
             <div class="operaciones">
-                <a href="operaciones/transferir.html"><h1>Transferir</h1></a>
+                <a href="/html/operaciones/transferir.html"><h1>Transferir</h1></a>
             </div>
         </div>
 
         <div class="fila">
             <div class="operaciones">
-                <a href="operaciones/consultar.html"><h1>Consultar saldo</h1></a>
+                <a href="/html/operaciones/consultar.html"><h1>Consultar saldo</h1></a>
             </div>
             <div class="operaciones">
-                <a href="operaciones/historial.html"><h1>Transacciones</h1></a>
+                <a href="/html/operaciones/historial.html"><h1>Transacciones</h1></a>
             </div>
         </div>
     </section>
