--- a/src/main/resources/static/html/operaciones/consultar.html
+++ b/src/main/resources/static/html/operaciones/consultar.html
@@ -12,10 +12,10 @@
         <nav class="nav">
             <div class="logo">Sistema financiero</div> 
             <ul class="menu">
-                <li><a href="../index.html" class="enlace" id="inicio">Inicio</a></li>
+                <li><a href="/html/index.html" class="enlace" id="inicio">Inicio</a></li>
                 <li><a href="#" class="enlace" id="actualizar">Servicios</a></li> 
                 <li><a href="#" class="enlace" id="contacto">Contáctanos</a></li> 
-                <li><a href="login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
+                <li><a href="/html/login.html" class="enlace" id="cerrar-sesion">Cerrar sesión</a></li> 
             </ul>
             <ul class="menu-perfil">
                 <li><a href="/html/perfil.html" class="enlace-perfil" id="inicio">
