--- a/src/main/resources/static/html/vistas/perfil.html
+++ b/src/main/resources/static/html/vistas/perfil.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" href="../css/index.css"> 
-    <link rel="stylesheet" href="../css/perfil.css">
+    <link rel="stylesheet" href="/css/index.css"> 
+    <link rel="stylesheet" href="/css/perfil.css">
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
     </footer>
 
     
-    <script type="module" src="../js/perfil.js"></script>  
-    <script src="../js/main.js"></script>
+    <script type="module" src="/js/perfil.js"></script>  
+    <script src="/js/main.js"></script>
 </body>
 </html>
