--- a/src/main/resources/static/html/vistas/update.html
+++ b/src/main/resources/static/html/vistas/update.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="../css/update.css"> 
-    <link rel="stylesheet" href="../css/index.css"> 
+    <link rel="stylesheet" href="/css/update.css"> 
+    <link rel="stylesheet" href="/css/index.css"> 
 </head>
 <body>
     <header>
@@ -78,9 +78,9 @@
         <p>© 2025 Sistema Financiero</p>
     </footer>
 
-    <script type="module" src="../js/perfil.js"></script>  
-    <script type="module" src="../js/actualizar.js"></script>
-    <script src="../js/main.js"></script>  
+    <script type="module" src="/js/perfil.js"></script>  
+    <script type="module" src="/js/actualizar.js"></script>
+    <script src="/js/main.js"></script>  
 
 </body>
 </html>
