--- a/src/main/resources/static/html/administrador/usuarios/gestionUsuarios.html
+++ b/src/main/resources/static/html/administrador/usuarios/gestionUsuarios.html
@@ -7,6 +7,7 @@
     <title>Panel administrativo</title>
     <link rel="stylesheet" href="/css/administrativo/gestionUsuarios.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/administrativo/actualizarDatosUsuario.css">
 </head>
 
 <body>
@@ -39,18 +40,19 @@
         <h1>Operaciones disponibles</h1>
 
         <div class="buscar">
-                <h3>Consultar por documento</h3>
-                <form id="consultar">
-                    <label for="id" id="documento">Documento: </label>
-                    <input type="number" id="id" placeholder="Ingrese el numero">
-                    <button class="btn">Buscar</button>
-                </form>
-            </div>
+            <h3>Consultar por documento</h3>
+            <form id="consultar">
+                <label for="id">Documento: </label>
+                <input type="number" id="identidad" placeholder="Ingrese el numero">
+                <button class="btn" type="submit">Buscar</button>
+            </form>
+        </div>
 
         <div class="tabla-contenedor">
             <table>
                 <tr>
                     <th>Nombre</th>
+                    <th>Apellido</th>
                     <th>Documento</th>
                     <th>Correo</th>
                     <th>Usuario</th>
@@ -60,21 +62,78 @@
                     <th>Fecha de nacimiento</th>
                 </tr>
                 <tr id="registros">
-                    
+
                 </tr>
             </table>
         </div>
 
         <div class="acciones">
             <div class="card">
-                <a href="#" class="btn">Crear</a>
-                <a href="#" class="btn">Editar</a>
-                <a href="#" class="btn">Bloquear</a>
-                <a href="#" class="btn">Eliminar</a>
+                <div id="overlay"></div>
+                <a href="#" class="btn" id="crear">Crear</a>
+                <a href="#" class="btn" id="link-trigger-update">Editar</a>
+                <a href="#" class="btn" id="bloquear">Bloquear</a>
+                <a href="#" class="btn" id="eliminar">Eliminar</a>
             </div>
         </div>
 
-         <div id="resultado" class="resultado"></div>
+        <div id="overlay-update"></div>
+        <div id="menu-update" class="hidden-update">
+            <h2>Actualizar datos</h2>
+            <form id="ActualizarUsuario">
+                <div class="grupo-campos-usuario dos-columnas">
+
+                    <div class="columna izquierda">
+
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" required>
+
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" id="apellido" name="apellido" required>
+
+                        <label for="documento">Documento:</label>
+                        <input type="text" id="documento" name="documento" required>
+
+                        <label for="email">Correo:</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <label for="usuario">Usuario:</label>
+                        <input type="text" id="username" name="username" required>
+
+                    </div>
+
+                    <div class="columna derecha">
+
+                        <label for="rol">Rol:</label>
+                        <input type="text" id="rol" name="rol" required>
+
+                        <label for="cuenta">Número de cuenta:</label>
+                        <input type="text" id="cuenta" name="cuenta" required>
+
+                        <label for="estado">Estado:</label>
+                        <input type="text" id="estado" name="estado" required>
+
+                        <label for="nacimiento">Fecha de nacimiento:</label>
+                        <input type="date" id="nacimiento" name="nacimiento" required>
+
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" disabled>
+
+                    </div>
+
+                </div>
+
+                <div class="boton-update">
+                    <button type="submit">Actualizar persona</button>
+                </div>
+
+                <div id="resultadoUsuario" class="resultado"></div>
+            </form>
+
+
+        </div>
+
+        <div id="resultado" class="resultado"></div>
     </main>
 
 
